Quick color fixes.

--- a/Red-Gray-Simple.theme.css
+++ b/Red-Gray-Simple.theme.css
@@ -42,6 +42,17 @@ color:red !important;
 background-color:rgba(0,0,0,0.3) !important;
 padding:5px !important;
 }
+.contentsDefault-nt2Ym5.contents-4L4hQM.contentsLink-2ScJ_P.contents-4L4hQM {
+color:red;
+}
+.flex-center.now-playing {
+background-color:rgba(0,0,0,0.3) !important;
+border: 1px solid red;
+}
+.game-name.game-name-input {
+background-color:rgba(0,0,0,0.3) !important;
+border: 1px solid red;
+}
 .item-2zi_5J.marginBottom8-1mABJ4.horizontal-2VE-Fw.flex-3B1Tl4.directionRow-yNbSvJ.cardPrimaryEditable-2IQ7-V.card-3DrRmC {
 background-color:rgba(0,0,0,0.3) !important;
 }
